<resources>
    <string name="app_name">GiftRain</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_edit">Edit</string>
    <string name="button_finished">Finished</string>
    <string name="button_back">Back</string>

    <string name="action_settings">Settings</string>

    <string name="login_username">E-mail</string>
    <string name="login_password">Password</string>
    <string name="register_first_name">First name</string>
    <string name="register_last_name">Last name</string>
    <string name="register_birth_date">Birth date</string>
    <string name="register_error">You must enter your </string>

    <string name="button_register">Register</string>
    <string name="button_connect">Connect</string>
    <string name="button_guest">Guest</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="button_back_to_login">Back to login</string>
    <string name="button_profile">Profile</string>
    <string name="button_wish_list">Wish List</string>
    <string name="button_group_search">Group Search</string>
    <string name="profile_first_name_title">First Name :</string>
    <string name="profile_last_name_title">Last Name :</string>
    <string name="profile_email_title">Email :</string>
    <string name="profile_birth_date_title">Birth Date :</string>
    <string name="profile_region_title">City/Region</string>
    <string name="profile_interests_title">Interests :</string>
    <string name="button_group_search_search">Search</string>
    <string name="button_my_groups">My groups</string>
    <string name="button_invite">Invite someone by SMS</string>

    <string name="group_page_button_participate">Participate</string>
    <string name="group_page_button_see_participants">See participants</string>
    <string name="group_page_button_see_comments">See comments</string>
    <string name="group_page_time_until_next_draw">"Next draw : %s"</string>
    <string name="group_page_gift_price">"Gift price : %1$d$"</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar est non tempor hendrerit. Cras a velit convallis neque semper ultricies. Integer accumsan sodales nisl a sagittis. Suspendisse elit velit, imperdiet in ligula non, venenatis vehicula orci. Nam in justo sit amet orci mollis porttitor.</string>
    <string name="group_search_sort_by_participants">Participants</string>
    <string-array name="themes">
        <item>All themes</item>
        <item>pets</item>
        <item>household</item>
        <item>theme 3</item>
        <item>theme 4</item>
    </string-array>
    <string-array name="search">
        <item>Beard Products</item>
        <item>Cat Food</item>
        <item>Dog Toys</item>
    </string-array>


    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_in">Signed in</string>
    <string name="disconnect">Disconnect</string>

    <string name="edit_group_group_name">Group name :</string>
    <string name="edit_group_group_description">Group description :</string>
    <string name="edit_group_group_scope">Scope :</string>
    <string name="edit_group_error">You must fill every field</string>
    <string name="edit_group_draw_interval">Draw interval (days)</string>
    <string name="edit_group_theme">Theme</string>

    <string name="title_activity_wishlist">Wishlist</string>
    <string name="wish_title">Wish title</string>
    <string name="wish_theme">Theme</string>
    <string name="wish_price">Price</string>
    <string name="edit_wish_error">You must fill every field</string>

    <string name="sms_default">You should check out this cool app called Gift Rain!</string>


    <string-array name="group_scopes">
        <item>Public</item>
        <item>Owner invites</item>
        <item>Participants invites</item>
    </string-array>

</resources>
