<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Activities.Login">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:singleLine="true"
        android:id="@+id/username"
        android:hint="@string/login_username"
        />
    <EditText
        android:password="true"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:singleLine="true"
        android:layout_below="@+id/username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/login_password"
        android:id="@+id/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_connect"
        android:id="@+id/buttonConnect"
        android:layout_below="@id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickLogin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:id="@+id/buttonRegister"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:onClick="onClickRegister"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_guest"
        android:id="@+id/buttonGuest"
        android:layout_below="@+id/password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClickGuest"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttonConnect"
        android:id="@+id/registerLayout"
        android:visibility="invisible">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:singleLine="true"
            android:id="@+id/firstName"
            android:hint="@string/register_first_name"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:singleLine="true"
            android:id="@+id/lastName"
            android:hint="@string/register_last_name"
            android:layout_below="@id/firstName"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/button_cancel"
            android:id="@+id/buttonCancel"
            android:onClick="onClickCancelRegister"/>
    </RelativeLayout>


</RelativeLayout>
