<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alexis.colval.giftrain.Homepage">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_profile"
        android:id="@+id/buttonProfile"
        android:onClick="onClickProfile"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_wish_list"
        android:id="@+id/buttonWishlist"
        android:layout_below="@+id/buttonProfile"
        android:onClick="onClickWishlist"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_group_search"
        android:id="@+id/buttonGroupSearch"
        android:layout_below="@+id/buttonWishlist"
        android:onClick="onClickGroupSearch"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_my_groups"
        android:id="@+id/buttonMyGroups"
        android:layout_below="@+id/buttonGroupSearch"
        android:onClick="onClickMyGroups"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back_to_login"
        android:id="@+id/buttonLogout"
        android:layout_alignParentBottom="true"
        android:onClick="OnClickLogout"/>
</RelativeLayout>
