<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditGroup">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:singleLine="true"
            android:text="@string/edit_group_group_name"
            android:labelFor="@+id/groupName"
            android:layout_rowSpan="20"
            android:layout_columnSpan="30"
            android:layout_column="30"
            android:layout_row="0"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:singleLine="true"
            android:text="@string/edit_group_group_scope"
            android:labelFor="@+id/groupScope"
            android:layout_rowSpan="20"
            android:layout_columnSpan="30"
            android:layout_column="30"
            android:layout_row="20"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:singleLine="true"
            android:text="@string/edit_group_draw_interval"
            android:labelFor="@+id/drawInterval"
            android:layout_rowSpan="20"
            android:layout_columnSpan="30"
            android:layout_column="30"
            android:layout_row="40"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:singleLine="true"
            android:text="@string/edit_group_group_description"
            android:labelFor="@+id/groupDescription"
            android:layout_rowSpan="20"
            android:layout_columnSpan="30"
            android:layout_column="30"
            android:layout_row="60"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:singleLine="true"
            android:text="@string/edit_group_theme"
            android:labelFor="@+id/groupTheme"
            android:layout_rowSpan="20"
            android:layout_columnSpan="30"
            android:layout_column="30"
            android:layout_row="80"/>
        <EditText
            android:singleLine="true"
            android:id="@+id/groupName"
            android:inputType="textCapWords"
            android:layout_rowSpan="20"
            android:layout_columnSpan="40"
            android:layout_column="60"
            android:layout_row="0"
            android:layout_width="match_parent"/>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/groupScope"
            android:layout_rowSpan="20"
            android:layout_columnSpan="40"
            android:layout_column="60"
            android:layout_row="20"
            android:layout_width="match_parent"/>
        <EditText
            android:singleLine="true"
            android:id="@+id/drawInterval"
            android:inputType="number"
            android:layout_rowSpan="20"
            android:layout_columnSpan="40"
            android:layout_column="60"
            android:layout_row="40"
            android:layout_width="match_parent"/>
        <EditText
            android:singleLine="true"
            android:id="@+id/groupDescription"
            android:inputType="text"
            android:layout_rowSpan="20"
            android:layout_columnSpan="40"
            android:layout_column="60"
            android:layout_row="60"
            android:layout_width="match_parent"/>
        <EditText
            android:singleLine="true"
            android:id="@+id/groupTheme"
            android:inputType="text"
            android:layout_rowSpan="20"
            android:layout_columnSpan="40"
            android:layout_column="60"
            android:layout_row="80"
            android:layout_width="match_parent"/>
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:onClick="onClickCancelEditGroup"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_finished"
        android:layout_alignParentEnd ="true"
        android:layout_alignParentBottom="true"
        android:onClick="onClickDoneEditGroup"/>

</RelativeLayout>
