<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alexis.colval.giftrain.Activities.EditWish">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:singleLine="true"
            android:text="@string/wish_title"
            android:labelFor="@+id/wishTitle"
            android:layout_rowSpan="20"
            android:layout_columnSpan="30"
            android:layout_column="30"
            android:layout_row="0"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:singleLine="true"
            android:text="@string/wish_theme"
            android:labelFor="@+id/wishTheme"
            android:layout_rowSpan="20"
            android:layout_columnSpan="30"
            android:layout_column="30"
            android:layout_row="20"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:singleLine="true"
            android:text="@string/wish_price"
            android:labelFor="@+id/wishPrice"
            android:layout_rowSpan="20"
            android:layout_columnSpan="30"
            android:layout_column="30"
            android:layout_row="40"/>

        <EditText
            android:singleLine="true"
            android:id="@+id/wishTitle"
            android:inputType="textCapWords"
            android:layout_rowSpan="20"
            android:layout_columnSpan="40"
            android:layout_column="60"
            android:layout_row="0"
            android:layout_width="match_parent"/>
        <EditText
            android:id="@+id/wishTheme"
            android:inputType="text"
            android:singleLine="true"
            android:layout_rowSpan="20"
            android:layout_columnSpan="40"
            android:layout_column="60"
            android:layout_row="20"
            android:layout_width="match_parent"/>
        <EditText
            android:singleLine="true"
            android:id="@+id/wishPrice"
            android:inputType="number"
            android:layout_rowSpan="20"
            android:layout_columnSpan="40"
            android:layout_column="60"
            android:layout_row="40"
            android:layout_width="match_parent"/>

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:onClick="onClickCancelEditWish"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_finished"
        android:layout_alignParentEnd ="true"
        android:layout_alignParentBottom="true"
        android:onClick="onClickDoneEditWish"/>
</RelativeLayout>
