<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alexis.colval.giftrain.Profile"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/ProfileTitle"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                android:id="@+id/profilePicture"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:singleLine="true"
                android:text="@string/profile_first_name_title"
                android:labelFor="@+id/firstName"
                android:layout_rowSpan="20"
                android:layout_columnSpan="30"
                android:layout_column="30"
                android:layout_row="0"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:singleLine="true"
                android:text="@string/profile_last_name_title"
                android:labelFor="@+id/lastName"
                android:layout_rowSpan="20"
                android:layout_columnSpan="30"
                android:layout_column="30"
                android:layout_row="20"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:singleLine="true"
                android:text="@string/profile_email_title"
                android:labelFor="@+id/email"
                android:layout_rowSpan="20"
                android:layout_columnSpan="30"
                android:layout_column="30"
                android:layout_row="40"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:singleLine="true"
                android:text="@string/profile_birth_date_title"
                android:labelFor="@+id/birthDate"
                android:layout_rowSpan="20"
                android:layout_columnSpan="30"
                android:layout_column="30"
                android:layout_row="60"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:singleLine="true"
                android:text="@string/profile_region_title"
                android:labelFor="@+id/region"
                android:layout_rowSpan="20"
                android:layout_columnSpan="30"
                android:layout_column="30"
                android:layout_row="80"/>

            <EditText
                android:singleLine="true"
                android:id="@+id/firstName"
                android:inputType="textPersonName"
                android:layout_rowSpan="20"
                android:layout_columnSpan="40"
                android:layout_column="60"
                android:layout_row="0"
                android:layout_width="match_parent"/>
            <EditText
                android:singleLine="true"
                android:id="@+id/lastName"
                android:inputType="textPersonName"
                android:layout_rowSpan="20"
                android:layout_columnSpan="40"
                android:layout_column="60"
                android:layout_row="20"
                android:layout_width="match_parent"/>
            <EditText
                android:singleLine="true"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_rowSpan="20"
                android:layout_columnSpan="40"
                android:layout_column="60"
                android:layout_row="40"
                android:layout_width="match_parent"/>
            <EditText
                android:singleLine="true"
                android:id="@+id/birthDate"
                android:inputType="date"
                android:layout_rowSpan="20"
                android:layout_columnSpan="40"
                android:layout_column="60"
                android:layout_row="60"
                android:layout_width="match_parent"/>
            <EditText
                android:singleLine="true"
                android:id="@+id/region"
                android:inputType="textCapWords"
                android:layout_rowSpan="20"
                android:layout_columnSpan="40"
                android:layout_column="60"
                android:layout_row="80"
                android:layout_width="match_parent"/>

        </GridLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button_edit"
                android:id="@+id/buttonEdit"
                android:onClick="editButton"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_back"
                android:id="@+id/buttonDone"
                android:onClick="doneButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
