<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alexis.colval.giftrain.GroupPage">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/textViewGroupTitle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTimeNextDraw"
        android:layout_below="@+id/textViewGroupTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textViewTimeNextDraw"
        android:id="@+id/progressBarTimeNextDraw"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTimeNextDraw"
        android:id="@+id/textViewGiftPrice"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewGiftPrice"
        android:text="@string/group_page_user_rating"
        android:id="@+id/textViewUserRating"/>
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textViewUserRating"
        android:id="@+id/ratingBarUserRating"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewGroupDescription"
        android:layout_below="@id/textViewUserRating"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewGroupDescription"
        android:text="@string/group_page_button_participate"
        android:id="@+id/buttonParticipateGroup"
        android:textSize="@dimen/abc_text_size_large_material"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_page_button_see_participants"
        android:layout_below="@id/buttonParticipateGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickSeeParticipants"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_page_button_see_comments"
        android:layout_below="@id/buttonParticipateGroup"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="onClickSeeComments"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewGroupKeywords"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
